--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -4,7 +4,7 @@
       <div class="col-7 col-md-4">
         <a href="/" class="tm-bg-black text-center tm-logo-container">
           <i class="fas fa-camera tm-site-logo mb-3"></i>
-          <h1 class="tm-site-name">PCAT</h1>
+          <h1 class="tm-site-name">Clean Blog</h1>
         </a>
       </div>
       <div class="col-5 col-md-8 ml-auto mr-0">
@@ -35,7 +35,7 @@
                   <a class="nav-link tm-nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link tm-nav-link" href="/add">Add Photo</a>
+                  <a class="nav-link tm-nav-link" href="/add">Add Post</a>
                 </li>
               </ul>
             </div>
