--- a/views/add.ejs
+++ b/views/add.ejs
@@ -17,7 +17,7 @@
 
 		<!-- Page content -->
 		<main>
-      <div class="container-fluid px-0">
+			<div class="container-fluid px-0">
 				<div class="mx-auto tm-content-container">					
 					<div class="row mt-3 mb-5 pb-3">
 						<div class="col-12">
@@ -26,25 +26,29 @@
                                 <p class="mb-4">
                                     Integer sit amet odio id libero tincidunt dignissim in eget arcu. Aliquam tristique ut magna sit amet tincidunt. Sed tempor tellus nulla, molestie luctus lectus tincidunt id. You are <u>not allowed</u> to re-distribute the template ZIP file on any template collection website.
                                 </p>
-              </div>							
+							</div>							
 						</div>						
 					</div>
                     <div class="mx-auto pb-3 tm-about-text-container px-3">
                         <div class="row">
                             <div class="col-lg-12 mb-5">
-                                <form method="POST" action="/posty" class="tm-contact-form">
+                                <form method="POST" action="/posts" class="tm-contact-form" enctype="multipart/form-data">
                                   <div class="form-group">
-                                    <input type="text" name="title" class="form-control rounded-0" placeholder="Title" required />
+                                    <input type="text" name="title" class="form-control rounded-0" placeholder="Post Title" required>
                                   </div>
                                   <div class="form-group">
-                                    <textarea rows="8" name="detail" class="form-control rounded-0" placeholder="Detail"
+                                    <textarea rows="8" name="detail" class="form-control rounded-0" placeholder="Post Detail"
                                               required></textarea>
+                                  </div>
+                                  <div class="form-group">
+                                    <input type="file" name="image" class="form-control-file rounded-0" >
                                   </div>
                                   <div class="form-group mb-0">
                                     <button type="submit" class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"><span>Submit</span></button>
                                   </div>
                                 </form>    
                             </div>
+                          
                         </div>  
                     </div>                                      			
 				</div>
